--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>com.liuzhenli</groupId>
     <artifactId>demo</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
@@ -30,26 +30,137 @@
             </plugin>
         </plugins>
     </build>
+    <properties>
+        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <downloadSources>true</downloadSources>
+
+        <!--日志相关-->
+        <logback-encoder.version>4.11</logback-encoder.version>
+        <lombok.version>1.16.20</lombok.version>
+        <persistent-models.version>1.0-SNAPSHOT</persistent-models.version>
+        <business-models.version>1.0-SNAPSHOT</business-models.version>
+        <swagger.version>2.6.1</swagger.version>
+        <spring-common.version>1.0-SNAPSHOT</spring-common.version>
+        <fegin.version>1.4.5.RELEASE</fegin.version>
+        <spring-utils.version>1.0-SNAPSHOT</spring-utils.version>
+        <fastjson.version>1.2.54</fastjson.version>
+        <fastorm.version>0.0.2-SNAPSHOT</fastorm.version>
+        <mybatis.version>1.3.1</mybatis.version>
+        <spring-jdbc.version>5.0.2.RELEASE</spring-jdbc.version>
+        <xxl-job.version>2.0.0-SNAPSHOT</xxl-job.version>
+        <commons-beanutils.verison>1.9.3</commons-beanutils.verison>
+        <javax.servlet.version>2.5</javax.servlet.version>
+
+    </properties>
+
     <dependencies>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>2.3.1.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.2.7.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>5.2.7.RELEASE</version>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${commons-beanutils.verison}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
+        </dependency>
+
+        <!--fegin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+
+        <!--消息总线 kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+
+        <!--日志相关-->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logback-encoder.version}</version>
+        </dependency>
+
+
+        <!--实体相关-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${javax.servlet.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--注解-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+        </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <distributionManagement>
+        <!--<repository>-->
+        <!--<id>im20.releases.http</id>-->
+        <!--<name>Nexus Release Repository</name>-->
+        <!--<url>http://repo.17k.com/nexus/content/repositories/releases/</url>-->
+        <!--</repository>-->
+        <!--<snapshotRepository>-->
+        <!--<id>im20.snapshots.http</id>-->
+        <!--<name>Nexus Snapshots Repository</name>-->
+        <!--<url>http://repo.17k.com/nexus/content/repositories/snapshots/</url>-->
+        <!--</snapshotRepository>-->
+        <repository>
+            <id>im20.releases.http</id>
+            <name>Nexus Release Repository</name>
+            <url>file:///opt/Nexus/release</url>
+        </repository>
+        <snapshotRepository>
+            <id>im20.snapshots.http</id>
+            <name>Nexus Snapshots Repository</name>
+            <url>file:///opt/Nexus/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
